--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,8 +16,34 @@
   background-size: cover;
   padding: 300px 0;
   text-align: center;
+
+  h1 {
+    color: $red;
+    font-size: 50px;
+    font-family: $primary-font;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+  }
+
+  h3 {
+    font-family: $secondary-font;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+  }
+
   // top: 50%;
   // left: 50%;
   // transform: translate(-50%, -50%);
   // color: white;
+}
+
+h5 {
+  color: white;
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  text-align: center;
+}
+
+.mastfoot {
+  background: rgb(55, 54, 54);
+  color: rgb(239, 234, 234);
 }
