landing page html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,17 @@
 <div class="hero-image">
   <div class="hero-text">
-    <h1>DEATH DEALERS</h1>
-    <h3>UNLEASH THE SHADOWS: EMPOWER YOUR WILL WITH LETHAL PRECISION</h3>
+    <div class="container">
+
+      <h1>DEATH DEALERS</h1>
+      <h3 class="mt-4">UNLEASH THE SHADOWS: EMPOWER YOUR WILL WITH LETHAL PRECISION</h3>
+      <h5 class="mt-4">Welcome to the clandestine realm of our elite assassin marketplace. Enter a world where shadows hold secrets and contracts come to life. Our platform connects those in need with the most formidable and precise assassins the underworld has to offer. From covert operations to calculated eliminations, our skilled professionals operate with a level of finesse that surpasses imagination. Immerse yourself in a realm of darkness, where whispers of revenge and justice intertwine. With strict confidentiality and a commitment to discretion, our marketplace unlocks the door to a realm where desires meet expertise. Explore our curated selection of exceptional assassins and embark on a journey that defies the ordinary. Dare you ignite the contract?</h5>
+    </div>
   </div>
 </div>
-<p>
-  Welcome to the clandestine realm of our elite assassin marketplace. Enter a world where shadows hold secrets and contracts come to life. Our platform connects those in need with the most formidable and precise assassins the underworld has to offer. From covert operations to calculated eliminations, our skilled professionals operate with a level of finesse that surpasses imagination. Immerse yourself in a realm of darkness, where whispers of revenge and justice intertwine. With strict confidentiality and a commitment to discretion, our marketplace unlocks the door to a realm where desires meet expertise. Explore our curated selection of exceptional assassins and embark on a journey that defies the ordinary. Dare you ignite the contract?
-</p>
+
+
+<div class="mastfoot mt-auto text-center">
+  <div class="inner">
+    <p>Created by:  <a href="https://github.com/Donald-Chow">Donald</a>, <a href="https://github.com/tyhyun309">Yin</a>, <a href="https://github.com/jshizuki">Joyce</a>, <a href="https://github.com/Arthur-Andrade194">Arthur</a> - <a href="https://www.lewagon.com/">@Lewagon</p>
+  </div>
+</div>
