--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,6 +15,11 @@
   color: white;
 }
 
+.card-title {
+  margin-bottom: 8px;
+
+}
+
 .card-product {
   overflow: hidden;
   height: 256px;
@@ -56,16 +61,20 @@
 
 // CARD FOR ASSASSIN(SHOW) and BOOKING(SHOW)
 // ----- big card --------------------
+.assassin-desc {
+  color: $black;
+}
 
 .cards-profile {
-  background: #BBBBBB;
+  background: $medium-gray;
   box-shadow: 5px 5px 1px rgba(0,0,0,0.2);
+  padding: 16px;
   //width: 1045px;
-  min-width: fit-content;
+  // min-width: fit-content;
 }
 
 .cards-profile p {
-  color: white;
+  color: $white;
   font-size: 20px;
   padding: 11px;
 }
@@ -98,6 +107,33 @@
 }
 
 // assassin bookings
+
+.grid-a-bookings {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-gap: 16px;
+}
+
+.grid-a-profile-info {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  color: $black;
+}
+
+.cards-a-bookings-info {
+
+}
+
+.cards-booking-active {
+  overflow: scroll;
+}
+
+.card-sticky-top {
+  position: sticky;
+  top: 0px;
+}
+
+
 .cards-2column {
   display: grid;
   grid-template-columns: 1fr 1fr;
