--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,5 +8,7 @@ $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$gray: #747474;
+$medium-gray: #a4a4a4;
+$light-gray: #e8e8e8;
+$white: #d4d4d4
