footer fix and hover in navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,9 +10,8 @@
 </div>
 
 
-<div class="mastfoot mt-auto text-center">
+<div class="mastfoot text-center footer py-3" style="height: 60px;" >
   <div class="inner">
-    <p>Created by:  <a href="https://github.com/Donald-Chow">Donald</a>, <a href="https://github.com/tyhyun309">Yin</a>, <a href="https://github.com/jshizuki">Joyce</a>, <a href="https://github.com/Arthur-Andrade194">Arthur</a> - <a href="https://www.lewagon.com/">@Lewagon</p>
+    <p>Created by:  <a href="https://github.com/Donald-Chow">Donald</a> - <a href="https://github.com/tyhyun309">Yin</a> - <a href="https://github.com/jshizuki">Joyce</a> - <a href="https://github.com/Arthur-Andrade194">Arthur</a> - <a href="https://www.lewagon.com/">@Lewagon</p>
   </div>
 </div>
-
