--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,7 +10,10 @@
 .navbar-lewagon .navbar-brand img {
   width: 80px;
   margin-left: 8px;
-
+  &:hover {
+    transform: scale(1.20);
+    transition: 0.5s;
+}
 }
 
 .navbar-lewagon .navbar-nav .nav-link {
@@ -26,6 +29,13 @@
   margin-right: 24px;
   &:hover {
     color: rgb(234, 18, 18);
+    transition: 0.5s;
+  }
+}
+
+.navbar-lewagon .avatar {
+  &:hover {
+    transform: scale(1.20);
     transition: 0.5s;
   }
 }
