--- a/app/views/bookings/_booking_map_for_assassins.html.erb
+++ b/app/views/bookings/_booking_map_for_assassins.html.erb
@@ -1,5 +1,6 @@
-<% if booking.latitude && booking.longitude %>
-  <div style="width: 100%; height: 600px;" id="map-<%= booking.id %>"
+<div class="map-assassin">
+	<% if booking.latitude && booking.longitude %>
+		<div style="width: 100%; height: 300px;" id="map-<%= booking.id %>"
     data-controller="map"
     data-map-markers-value="<%= [
       {
@@ -11,9 +12,11 @@
       }
     ].to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-<% else %>
-  <div>
-    Map cannot be displayed for this booking.
-  </div>
-<% end %>
+		</div>
+	<% else %>
+		<div class="map-text">
+			<p>Map cannot be displayed for this booking.</p>
+		</div>
+	<% end %>
+
+</div>
