--- a/app/views/assassins/index.html.erb
+++ b/app/views/assassins/index.html.erb
@@ -15,16 +15,18 @@
 	<div class="cards">
 		<% @assassins.each do |assassin| %>
 			<div class="row">
-				<div class="card-product col-3">
-					<%= cl_image_tag(assassin.photo.key, crop: :thumb, gravity: :faces, height: 150, width: 235) %>
-					<div class="card-product-infos">
+				<div class="card-product col-3 mx-2">
+        <div class="card-product-pic">
+					<%= cl_image_tag(assassin.photo.key, crop: :thumb, gravity: :faces, height: 176, width: 276) %>
+				</div>
+          <div class="card-product-infos">
 						<div class="div">
 							<h2><%= assassin.name %></h2>
 							<p><%= assassin.weapon %></p>
 							<%= link_to "Find out more", assassin_path(assassin), class: "small-btn" %>
 						</div>
 						<div class="div">
-							<p>💰<%= assassin.price %> bitcion(s)</p>
+							<p><%= assassin.price %> <i class="fa-brands fa-btc"></i></p>
 						</div>
 					</div>
 				</div>
