--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -7,7 +7,7 @@
 // General style
 $font-family-sans-serif: $secondary-font;
 // $headings-font-family:   $headers-font;
-$headings-font-family: $primary-font;
+$headings-font-family: $secondary-font;
 $body-bg:                $light-gray;
 $font-size-base:         1rem;
 
