--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,6 +21,8 @@
   width: 256px;
   background: #d9d9d9;
   box-shadow: 5px 5px 1px rgba(0,0,0,0.2);
+  background: linear-gradient(135deg, #f5f7fa 0%, #808284 100%);
+  box-shadow: 3px 3px 8px rgba(255, 255, 255, 0.9);
 }
 .card-product-infos {
   display: flex;
@@ -59,7 +61,8 @@
 
 .cards-profile {
   background: #BBBBBB;
-  box-shadow: 5px 5px 1px rgba(0,0,0,0.2);
+  background: linear-gradient(135deg, #979797 0%, #3c3c3c 100%);
+  box-shadow: 5px 5px 5px rgba(115, 115, 115, 0.2);
   //width: 1045px;
   min-width: fit-content;
 }
@@ -79,6 +82,7 @@
   height: 100%;
   width: 350px;
   object-fit: cover;
+  padding: 15px;
 }
 
 .card-profile h2 {
