--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,10 +2,10 @@
 
 // Comment by Joyce: This is the red color used in Figma.
 // You can use it for headlines, titles or any other important information
-$red: #BE0000;
+$red: #7a1010;
 
-$blue: #0D6EFD;
-$yellow: #FFC65A;
+$blue: #053884;
+$yellow: #9c7a3d;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #747474;
