change btn collors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,7 +6,7 @@ $red: #7a1010;
 
 $blue: #053884;
 $yellow: #9c7a3d;
-$orange: #E67E22;
+$orange: #bf691d;
 $green: #1EDD88;
 $gray: #747474;
 $medium-gray: #a4a4a4;
