--- a/app/views/assassin/bookings/_jobCard.html.erb
+++ b/app/views/assassin/bookings/_jobCard.html.erb
@@ -3,7 +3,7 @@
 		<div class="card-header">
 			<h3 class="card-title">Target Name: <%= booking.target_name %> </h3>
 			<p>Assignment # <%= booking.id %></p>
-			<div class="card-footer text-muted">
+			<div class="card-title">
 				Due Date: <%= booking.deadline %>
 			</div>
 			Target Location: <%= booking.target_location %>
