--- a/app/views/bookings/_booking_map.html.erb
+++ b/app/views/bookings/_booking_map.html.erb
@@ -13,7 +13,7 @@
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 <% else %>
-  <div>
+  <div style="color:white">
     Map cannot be displayed for this booking.
   </div>
 <% end %>
